<resources>
    <string name="app_name">Vocabulary System</string>
    <string name="welcome_screen">Welcome Screen</string>
    <string name="splash">Splash</string>
    <string name="splash2">Splash2</string>
    <string name="play">Play</string>
    <string name="options">Options</string>
    <string name="quit">Quit</string>
    <string name="front">Front</string>
    <string name="opt1">Music</string>
    <string name="opt2">Off</string>
    <string name="opt3">Score Records</string>
    <string name="opt4">Check</string>
    <string name="opt5">Admin Mode</string>
    <string name="opt6">go</string>
    <string name="back">Back</string>
    <string name="about">About Us</string>
    <string name="name1">Marry Lourhyn Gernade</string>
    <string name="name2">Fria Losanes</string>
    <string name="name3">Mel Cyrril Penalver</string>
    <string name="name4">Ailyn Pandioday</string>
    <string name="name5">Girlie Maravilla</string>
    <string name="top_10_scorer">Top 10 Scorer</string>
    <string name="log_out">Log-Out</string>
    <string name="log_in">Log In</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="math">Math</string>
    <string name="science">Science</string>
    <string name="english">English</string>
    <string name="history">History</string>
    <string name="next">Next</string>
    <string name="select_subject">Select Subject</string>
    <string name="button">Button</string>
    <string name="adds">Add New Questions</string>
    <string name="eddits">Edit/Delete Question</string>
    <string name="admins">Select Operation</string>
    <string name="show_all_questions">Show All Questions</string>
    <string name="select_dificulty">Select Dificulty</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="multiple_choice">Multiple Choice</string>
    <string name="identification">Identification</string>
    <string name="true_or_false">True or False</string>
    <string name="select_type">Select Type</string>
    <string name="question_here">Question Here</string>
    <string name="falses">False</string>
    <string name="trues">True</string>
    <string name="submit">Submit</string>
    <string name="answer_here">Answer Here</string>
    <string name="alternate_1">Alternate 1</string>
    <string name="alternate_2">Alternate 2</string>
    <string name="alternate_3">Alternate 3</string>
    <string name="wrong_1">wrong 1</string>
    <string name="wrong_2">wrong 2</string>
    <string name="wrong_3">wrong 3</string>
    <string name="exnext">Next</string>
    <string name="exback">Back</string>
    <string name="ans1">A.</string>
    <string name="ans2">B.</string>
    <string name="ans3">C.</string>
    <string name="ans4">D.</string>
    <string name="answer">Answer</string>
    <string name="finish">Finish</string>
    <string name="start">Yes</string>
    <string name="ends">No</string>
    <string name="start_again">Start Again</string>
    <string name="scores">Score</string>
    <string name="hex1">45</string>
    <string name="hex2">35</string>
    <string name="add_more">Add More</string>
    <string name="return_to_selection">Return To Selection</string>
    <string name="question_has_been_added">Question Has Been Added</string>
</resources>
