<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vocabularysystem.MainB">

    <Button
        android:id="@+id/opt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/opt2"
        android:layout_alignStart="@+id/opt2"
        android:layout_below="@+id/mus1"
        android:layout_marginTop="14dp"
        android:text="@string/opt2" />

    <TextView
        android:id="@+id/mus1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/opt1"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/opt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/opt3"
        android:layout_alignStart="@+id/opt3"
        android:layout_below="@+id/mus2"
        android:layout_marginTop="20dp"
        android:text="@string/opt4" />

    <TextView
        android:id="@+id/mus2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/opt3"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/opt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/opt6" />

    <TextView
        android:id="@+id/mus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/opt2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/opt5"
        android:textColor="#000"
        android:textSize="24sp" />

    <Button
        android:id="@+id/bouts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/about" />

    <Button
        android:id="@+id/rets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bouts"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/back" />

</RelativeLayout>
