<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminB23">
    <TextView
        android:id="@+id/idntxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/multiple_choice"
        android:textColor="#000"
        android:textSize="30sp" />

    <Button
        android:id="@+id/mc3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="29dp"
        android:text="@string/submit"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/mc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/idntxt"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/question_here"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mc1"
        android:layout_alignStart="@+id/mc1"
        android:layout_below="@+id/mc1"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/answer_here"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mc21"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mc2"
        android:layout_alignStart="@+id/mc2"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/wrong_1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mc22"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mc21"
        android:layout_alignStart="@+id/mc21"
        android:layout_below="@+id/mc21"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/wrong_2"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/mc23"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/mc22"
        android:layout_alignStart="@+id/mc22"
        android:layout_below="@+id/mc22"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:hint="@string/wrong_3"
        android:inputType="textPersonName" />


</RelativeLayout>
