<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainD">
    <Button
        android:id="@+id/bck2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:text="@string/back" />

    <TextView
        android:id="@+id/name1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:text="@string/name2"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name3"
        android:layout_marginTop="18dp"
        android:text="@string/name5"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name4"
        android:layout_alignStart="@+id/name4"
        android:layout_below="@+id/name4"
        android:layout_marginTop="21dp"
        android:text="@string/name4"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name5"
        android:layout_alignStart="@+id/name5"
        android:layout_below="@+id/name5"
        android:layout_marginTop="18dp"
        android:text="@string/name3"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/name5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name1"
        android:layout_marginTop="15dp"
        android:text="@string/name1"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="24sp" />

</RelativeLayout>
