<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminB21">
    <TextView
        android:id="@+id/idntxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/true_or_false"
        android:textColor="#000"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/tof1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/idntxt"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/question_here"
        android:inputType="textMultiLine"
        android:singleLine="false"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/tof2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tof1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp">

        <RadioButton
            android:id="@+id/tof21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/trues"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/tof22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/falses"
            android:textSize="30sp" />
    </RadioGroup>

    <Button
        android:id="@+id/idn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:text="@string/submit"
        android:textSize="30sp" />

</RelativeLayout>
