<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminB">


    <Button
        android:id="@+id/nxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:text="@string/next" />

    <RadioGroup
        android:id="@+id/subs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <RadioButton
            android:id="@+id/sub2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_light"
            android:padding="5dp"
            android:text="@string/science"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/sub3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_light"
            android:padding="5dp"
            android:text="@string/english"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/sub4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_light"
            android:padding="5dp"
            android:text="@string/history"
            android:textSize="30sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/ext1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/select_subject"
        android:textColor="#000"
        android:textSize="30sp" />

</RelativeLayout>
