<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminB2">
    <Button
        android:id="@+id/nxt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:text="@string/next" />

    <RadioGroup
        android:id="@+id/typ"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <RadioButton
            android:id="@+id/typ1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_light"
            android:padding="5dp"
            android:text="@string/multiple_choice"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/typ2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_light"
            android:padding="5dp"
            android:text="@string/identification"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/typ3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_light"
            android:padding="5dp"
            android:text="@string/true_or_false"
            android:textSize="30sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/ext32"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/select_type"
        android:textColor="#000"
        android:textSize="30sp" />

</RelativeLayout>
