<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainA1"
    android:id="@+id/bcke">


    <Button
        android:id="@+id/ma2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/next"
        android:textSize="30sp" />

    <RadioGroup
        android:id="@+id/mad2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp">

        <RadioButton
            android:id="@+id/mad21"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_white"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/easy"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/mad22"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_bg_white"
            android:padding="5dp"
            android:text="@string/normal"
            android:gravity="center"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/mad23"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:background="@drawable/button_bg_white"
            android:padding="5dp"
            android:text="@string/hard"
            android:textSize="30sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/mad1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:background="@drawable/button_bg_white"
        android:text="@string/select_dificulty"
        android:textColor="#000"
        android:textSize="30sp" />

</RelativeLayout>
